Fix avatar getting smaller when the message is too big

--- a/react-client/src/index.css
+++ b/react-client/src/index.css
@@ -139,11 +139,12 @@ ul {
   border-radius: 50%;
   color: #fff;
   margin-right: 10px;
+  width: 20px;
   height: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-basis: 20px;
+  flex-shrink: 0;
 }
 
 .avatar.self {
